--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,17 @@
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
     "prefer-destructuring": ["error", { "object": true, "array": false }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }]
+    "no-unused-vars": [
+      "error",
+      { "argsIgnorePattern": "req|res|next|val|err" }
+    ],
+    "prefer-object-spread": "warn",
+    "node/no-unsupported-features/es-syntax": [
+      "error",
+      {
+        "version": ">=8.3.0",
+        "ignores": []
+      }
+    ]
   }
 }
